force-app/main/default/objects/Invoice_Line__c/Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice Line</label>
    <nameField>
        <label>Invoice Line  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>