force-app/main/default/objects/Invoice_Line__c/fields/Invoice_Custom__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Custom__c</fullName>
    <label>Invoice Custom</label>
    <referenceTo>Invoice_Custom__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>