force-app/main/default/objects/Invoice_Line__c/fields/Legal_Basis__c.field-meta.xml
<CustomField>
    <fullName>Legal_Basis__c</fullName>
    <label>Legal Basis</label>
    <length>200</length>
    <type>Text</type>
</CustomField>